# Lacuna

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  README.zh-CN.md  extractor.py  proposal.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.toml
demo/: demo.py  demo_settings.md
docs/: MVP_items.md  architecture.md  industry_research_background.md  paragraph.md  roadmap.md
docs/adr/: 0001-multi-agent-shared-state.md
examples/: gradio_demo.py  run_audit.py  run_with_search.py
narrative_audit/: state.py
scripts/: audit_file.py
src/narrative_audit/: __init__.py  card.py  cli.py  config.py  env.py  extractor.py  graph.py  llm.py  ontology.py  pipeline.py  search.py  state.py  viz.py  webapp.py
src/narrative_audit/agents/: __init__.py  base.py  claim_splitter.py  conflict_detector.py  entity_resolver.py  evidence.py  gap_detector.py  graph_builder.py  labeler.py  missing_context.py  ontology_reasoner.py  report.py
src/narrative_audit/data/: ontology.toml
tests/: conftest.py  test_agents.py  test_card.py  test_config.py  test_entity_resolver.py  test_env.py  test_graph_agents.py  test_ontology.py  test_pipeline.py  test_search.py  test_viz.py  test_webapp.py
