[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narrative-audit"
version = "0.1.0"
description = "表述审阅引擎 — 多 agent + shared state 的叙述审阅流水线"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lacuna" }]
keywords = ["fact-check", "narrative", "agents", "llm", "audit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
demo = ["gradio", "plotly"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "fastapi>=0.110",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
narrative-audit = "narrative_audit.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/lacuna"
Documentation = "https://github.com/your-org/lacuna/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/narrative_audit"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
